--- a/gb/25/12/3/n14648024.md
+++ b/gb/25/12/3/n14648024.md
@@ -3,7 +3,7 @@
 <tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>俄王室冬季彩蛋以3020万美元成交 创拍卖纪录</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2025/12/id14648025-GettyImages-2248085582-600x400.jpg" />
-<h6>俄罗斯王室珍宝“冬之蛋”于2025年12月2日在英国伦敦的佳士得拍卖行以3020万美元拍出，创下拍卖纪录。图为11月27日在该拍卖行展示的“冬之蛋”。 (HENRY NICHOLLS/AFP via Getty Images)</h6>
+<h6>俄罗斯王室珍宝“冬季彩蛋”于2025年12月2日在英国伦敦的佳士得拍卖行以3020万美元拍出，创下拍卖纪录。图为11月27日在该拍卖行展示的“冬季彩蛋”。 (HENRY NICHOLLS/AFP via Getty Images)</h6>
 <hr>
 	<p>【大纪元2025年12月03日讯】（大纪元记者陈俊村报导）俄罗斯王室的稀世珍宝、一颗由水晶和钻石雕琢的蛋型工艺品日前以3,020万美元的天价在英国伦敦的拍卖行拍出，创下此类艺术品拍卖的最高价格世界纪录。</p>
 <p>据美国广播公司（ABC）报导，这颗被称为“冬季彩蛋”（Winter Egg）的法贝热彩蛋（Fabergé egg）于12月2日在佳士得拍卖行（Christie’s）的伦敦分行落槌，其拍卖价3,020万美元刷新了先前在2007年缔造的法贝热彩蛋拍卖纪录1,850万美元。</p>
@@ -18,15 +18,15 @@
 <figure id="attachment_14648027" aria-describedby="caption-attachment-14648027" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2025/12/id14648027-GettyImages-2248085436.jpg"><img decoding="async" class="size-large wp-image-14648027" src="https://i.epochtimes.com/assets/uploads/2025/12/id14648027-GettyImages-2248085436-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14648027" class="wp-caption-text">“冬季彩蛋”与一篮石英花。(HENRY NICHOLLS/AFP via Getty Images)</figcaption></figure>
 <p>在1975年至1994年间，这颗彩蛋一度被认为下落不明，直到1994年才在佳士得以超过700万瑞士法郎（当时的560万美元）的价格拍出。8年后，也就是2002年，该拍卖行再次以960万美元的价格将其拍出。</p>
 <p>佳士得指出，这颗彩蛋每次拍卖都创下法贝热彩蛋的世界最高拍卖价纪录。</p>
-<p>奥加内斯扬在本次拍卖会后说：“由于目前只有极少数王室复活节彩蛋仍在私人手中，这对于收藏家来说是一个难得的历史性机会，可以获得一件无与伦比的重要收藏品。”</p>
+<p>奥加内斯扬在本次拍卖会后说：“由于目前只有极少数王室复活节彩蛋仍在私人手中，这对于收藏家来说是一个难得的历史性机会，可以获得一件无与伦比的重要收藏品。”◇</p>
 <p>责任编辑：李明</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640659.md#1">罗晋被传婚变之际 经纪人发布罗父离世噩耗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640721.md#1">三退声明精选（2025/11/21）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640342.md#1">英申请永居资格年限延至10年 港人BNO年限不变</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640341.md#1">郑州多名男子开越野车撞开烟酒店大门抢劫</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/7/n11707479.md#1" target="_blank">林辉：上海中国国货公司创办人死于文革前</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md#1" target="_blank">探寻真相 兼听则明 ——法轮功小问答</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/10/22/n9758393.md#1" target="_blank">刘晓：中共吹捧的商鞅非良臣 创万世恶法</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/6/n11369063.md#1" target="_blank">踏上自由土地 独立日游行 望迫害结束</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
